--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --progress --open --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm rf build && webpack"
   },
   "keywords": [],
@@ -14,14 +13,14 @@
   "devDependencies": {
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.11.2",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "^5.3.1"
+  },
+  "dependencies": {
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
