--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --progress --open --hot",
-    "build": "rm rf build && webpack"
+    "build": "webpack",
+    "serve": "serve build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.1"
+    "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.1",
+    "serve": "^12.0.1",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "path": "^0.12.7",
